[package]
name = "hard"
version = "0.2.0"
authors = ["tom25519 <tom25519@pm.me>"]
edition = "2018"
description = "Security hardened buffers for Rust based on libsodium"
repository = "https://github.com/tom25519/hard"
license = "MIT OR Apache-2.0"
keywords = ["buffer", "libsodium", "memory", "sodium"]
categories = ["api-bindings", "cryptography", "memory-management"]

[dependencies]
errno = "0.2.7"
libsodium-sys = "0.2.7"
paste = "1.0.5"
thiserror = "1.0.25"
